# ntfs-explorer

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: main.rs
ui/: appwindow.slint
